# PDF_TO_EPUB_EXPORTER

./: .gitignore  README.md  pipeline.example.json  pyproject.toml  run.py
resources/: de_dictionary_sample.txt
src/pdf_to_epub_exporter/: cli.py  config.py  context.py  dictionary.py  epub.py  pipeline.py  registry.py  scanners.py  step.py
src/pdf_to_epub_exporter/steps/: __init__.py  dictionary_check.py  export_epub.py  export_txt.py  reconcile.py  scan_a.py  scan_b.py
